# Verteilte-Systeme-Praktikum

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Projektplan_Verteilte_Systeme_Praktikum.ods  README.md  build.sh  doc.sh  docker-compose.yml  test10.sh  test100.sh  testCode.sh  testNonFunctional.sh  testServiceProviderSync.sh
Google_tests/: CMakeLists.txt  testHttpServer.cpp  testSensoren.cpp
Google_tests/lib/googlemock/test/: gmock-spec-builders_test.cc
Google_tests/lib/googletest/src/: gtest-death-test.cc
Google_tests/lib/googletest/test/: googletest-port-test.cc
docker/centralServer/: Dockerfile
docker/sensors/: Dockerfile
docker/serviceProvider/: Dockerfile
src/: service.thrift  serviceSync.thrift
src/centralServer/: centralServer.cpp  centralServer.hpp  httpServer.cpp  httpServer.hpp  main.cpp
src/gen-cpp/: getCentralData.cpp  getCentralData.h  getCentralData_server.skeleton.cpp  serviceSync_constants.cpp  serviceSync_constants.h  serviceSync_types.cpp  serviceSync_types.h  service_constants.cpp  service_constants.h  service_types.cpp  service_types.h  syncToSecondary.cpp  syncToSecondary.h  syncToSecondary_server.skeleton.cpp
src/sensors/: baseSensor.cpp  baseSensor.hpp  fuelSensor.cpp  fuelSensor.hpp  main.cpp  meanspeedSensor.cpp  meanspeedSensor.hpp  speedSensor.cpp  speedSensor.hpp  trafficSensor.cpp  trafficSensor.hpp
src/serviceProvider/: build.gradle  settings.gradle
src/serviceProvider/src/main/java/App/: mainClass.java  serviceProviderBase.java  serviceProviderHandler.java  serviceProviderPrimary.java  serviceProviderSecondary.java  serviceProviderSecondaryWork.java  serviceProviderSyncHandler.java
src/serviceProvider/src/main/java/thriftServiceProvider/: getCentralData.java  sensorData.java
src/serviceProvider/src/main/java/thriftSyncServiceProvider/: syncData.java  syncToSecondary.java
src/serviceProvider/src/test/java/: TestServiceProvider.java
src/serviceProvider/src/test/resources/: docker-test.yml
